Sass file added with npm command

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 $color-primary:#55c57a;
 $color-primary-light:#7ed56f;
-$color-primary-dark:#28b485;
+$color-primary-dark:#28b462;
 
 
 *{
@@ -24,46 +24,120 @@ body{
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
-   
+
+    .logo-box{
+        position: absolute;
+        top: 40px;
+        left: 40px;
+
+        .logo{
+            height: 35px;
+        }
+    }
+
+    .text-box{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+
+        .heading-primary{
+            color: #fff;
+            text-transform: uppercase;
+            backface-visibility: hidden;
+            margin-bottom: 40px;
+
+            &-main{
+                display: block;
+                font-weight: 400;
+                font-size: 60px;
+                letter-spacing: 35px;
+                animation-name: moveInLeft;
+                animation-duration: 1s;
+            }
+            &-sub{
+                display: block;
+                font-weight: 700;
+                font-size: 20px;
+                letter-spacing: 17.4px;
+                animation-name: moveInRight;
+                animation-duration: 1s;
+            }
+        }
+        
+        .btn{
+            &:link,
+            &:visited{
+                text-transform: uppercase;
+                text-decoration: none;
+                padding: 15px 40px;
+                display: inline-block;
+                border-radius: 100px;
+                transition: 200ms;
+                position: relative;
+            }
+            &:hover{
+                transform: translateY(-3px);
+                box-shadow: 0 10px 20px rgba(0,0,0,.8);
+
+                &::after{
+                    transform: scale(1.4);
+                    opacity: 0;
+                }
+            }
+
+            &:active{
+                transform: translateX(-1px);
+                box-shadow: 0 5px 10px rgba(0,0,0,.8);
+            }
+            
+    
+            
+            &--white{
+                background-color: #fff;
+                color: #777;
+
+                
+                    &::after{
+                        content: '';
+                        background-color: #fff;
+                    
+                    
+                    }
+                
+            }
+        
+            &::after{
+                content: "";
+                display: inline-block;
+                height: 100%;
+                width: 100%;
+                border-radius: 100px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: all .4s;
+            }
+            
+            
+            &--animated{
+                animation-name: moveInBottom;
+                animation-duration: .5s;
+                animation-delay: .75s;
+                animation-fill-mode: backwards;
+            }
+    }
+    }
     
 }
-.logo-box{
-    position: absolute;
-    top: 40px;
-    left: 40px;
-}
-.logo{
-    height: 35px;
-}
-.text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 40px;
-}
-.heading-primary-main{
-    display: block;
-    font-weight: 400;
-    font-size: 60px;
-    letter-spacing: 35px;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-}
-.heading-primary-sub{
-    display: block;
-    font-weight: 700;
-    font-size: 20px;
-    letter-spacing: 17.4px;
-    animation-name: moveInRight;
-    animation-duration: 1s;
-}
+
+
+
+
+
+
 
 
 @keyframes moveInLeft{
@@ -106,55 +180,7 @@ body{
     }
 }
 
-.btn:link,
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: 200ms;
-    position: relative;
-    
-}
-.btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.8);
-}
-.btn:active{
-    transform: translateX(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.8);
-}
-
-.btn-white{
-    background-color: #fff;
-    color: #777;
-}
-.btn::after{
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-.btn-white::after{
-    content: '';
-    background-color: #fff;
 
 
-}
-.btn:hover::after{
-    transform: scale(1.4);
-    opacity: 0;
-}
-.btn-animated{
-    animation-name: moveInBottom;
-    animation-duration: .5s;
-    animation-delay: .75s;
-    animation-fill-mode: backwards;
-}
+
+
