--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-body {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
-  color: #777;
-  padding: 30px; }
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 98, 0.801)), url("../img/hero.jpg");
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
-  .header .logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px; }
-    .header .logo-box .logo {
-      height: 35px; }
-  .header .text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-    .header .text-box .heading-primary {
-      color: #fff;
-      text-transform: uppercase;
-      backface-visibility: hidden;
-      margin-bottom: 40px; }
-      .header .text-box .heading-primary-main {
-        display: block;
-        font-weight: 400;
-        font-size: 60px;
-        letter-spacing: 35px;
-        animation-name: moveInLeft;
-        animation-duration: 1s; }
-      .header .text-box .heading-primary-sub {
-        display: block;
-        font-weight: 700;
-        font-size: 20px;
-        letter-spacing: 17.4px;
-        animation-name: moveInRight;
-        animation-duration: 1s; }
-    .header .text-box .btn:link, .header .text-box .btn:visited {
-      text-transform: uppercase;
-      text-decoration: none;
-      padding: 15px 40px;
-      display: inline-block;
-      border-radius: 100px;
-      transition: 200ms;
-      position: relative; }
-    .header .text-box .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8); }
-      .header .text-box .btn:hover::after {
-        transform: scale(1.4);
-        opacity: 0; }
-    .header .text-box .btn:active {
-      transform: translateX(-1px);
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8); }
-    .header .text-box .btn--white {
-      background-color: #fff;
-      color: #777; }
-      .header .text-box .btn--white::after {
-        content: '';
-        background-color: #fff; }
-    .header .text-box .btn::after {
-      content: "";
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-      border-radius: 100px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      transition: all .4s; }
-    .header .text-box .btn--animated {
-      animation-name: moveInBottom;
-      animation-duration: .5s;
-      animation-delay: .75s;
-      animation-fill-mode: backwards; }
-
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -119,3 +28,101 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 40px; }
+  .heading-primary-main {
+    display: block;
+    font-weight: 400;
+    font-size: 60px;
+    letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s; }
+  .heading-primary-sub {
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 17.4px;
+    animation-name: moveInRight;
+    animation-duration: 1s; }
+
+.btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: 200ms;
+  position: relative; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8); }
+  .btn:hover::after {
+    transform: scale(1.4);
+    opacity: 0; }
+
+.btn:active {
+  transform: translateX(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    content: '';
+    background-color: #fff; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--animated {
+  animation-name: moveInBottom;
+  animation-duration: .5s;
+  animation-delay: .75s;
+  animation-fill-mode: backwards; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 98, 0.801)), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
+  .header .logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px; }
+    .header .logo-box .logo {
+      height: 35px; }
+  .header .text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
