--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,17 +6,18 @@
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
 
-    .logo-box{
+    &__logo-box{
         position: absolute;
-        top: 40px;
-        left: 40px;
+        top: 4rem;
+        left: 4rem;
 
-        .logo{
-            height: 35px;
-        }
+        
+    }
+    &__logo{
+        height: 3.5rem;
     }
 
-    .text-box{
+    &__text-box{
         position: absolute;
         top: 40%;
         left: 50%;
