--- a/css/style.css
+++ b/css/style.css
@@ -29,100 +29,169 @@
     opacity: 1;
     transform: translate(0); } }
 
-* {
+/* line 1, sass/base/_base.scss */
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
+  box-sizing: inherit; }
+
+/* line 9, sass/base/_base.scss */
+html {
+  font-size: 62.5%; }
+
+/* line 12, sass/base/_base.scss */
+body {
   box-sizing: border-box; }
 
+/* line 1, sass/base/_typography.scss */
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.7;
   color: #777;
   padding: 30px; }
 
+/* line 9, sass/base/_typography.scss */
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 40px; }
-  .heading-primary-main {
+  margin-bottom: 4rem; }
+  /* line 15, sass/base/_typography.scss */
+  .heading-primary--main {
     display: block;
     font-weight: 400;
-    font-size: 60px;
-    letter-spacing: 35px;
+    font-size: 6rem;
+    letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s; }
-  .heading-primary-sub {
+  /* line 23, sass/base/_typography.scss */
+  .heading-primary--sub {
     display: block;
     font-weight: 700;
-    font-size: 20px;
-    letter-spacing: 17.4px;
+    font-size: 2rem;
+    letter-spacing: 1.8rem;
     animation-name: moveInRight;
     animation-duration: 1s; }
 
+/* line 2, sass/components/_buttons.scss */
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: 200ms;
-  position: relative; }
+  position: relative;
+  font-size: 1.6rem; }
 
+/* line 13, sass/components/_buttons.scss */
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.8); }
+  /* line 17, sass/components/_buttons.scss */
   .btn:hover::after {
     transform: scale(1.4);
     opacity: 0; }
 
+/* line 23, sass/components/_buttons.scss */
 .btn:active {
   transform: translateX(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8); }
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.8); }
 
+/* line 30, sass/components/_buttons.scss */
 .btn--white {
   background-color: #fff;
   color: #777; }
+  /* line 35, sass/components/_buttons.scss */
   .btn--white::after {
     content: '';
     background-color: #fff; }
 
+/* line 44, sass/components/_buttons.scss */
 .btn::after {
   content: "";
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   transition: all .4s; }
 
+/* line 58, sass/components/_buttons.scss */
 .btn--animated {
   animation-name: moveInBottom;
   animation-duration: .5s;
   animation-delay: .75s;
   animation-fill-mode: backwards; }
 
+/* line 1, sass/layouts/_header.scss */
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 98, 0.801)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(75, 111, 211, 0.801), rgba(20, 55, 170, 0.801)), url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative; }
-  .header .logo-box {
+  /* line 9, sass/layouts/_header.scss */
+  .header__logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px; }
-    .header .logo-box .logo {
-      height: 35px; }
-  .header .text-box {
+    top: 4rem;
+    left: 4rem; }
+  /* line 16, sass/layouts/_header.scss */
+  .header__logo {
+    height: 3.5rem; }
+  /* line 20, sass/layouts/_header.scss */
+  .header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+/* line 1, sass/layouts/_grid.scss */
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  /* line 7, sass/layouts/_grid.scss */
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  /* line 2, sass/abstracts/_mixins.scss */
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  /* line 12, sass/layouts/_grid.scss */
+  .row [class^="col-"] {
+    background-color: #545fc2;
+    float: left;
+    color: #fff;
+    padding: 2rem;
+    font-size: 2rem; }
+    /* line 19, sass/layouts/_grid.scss */
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  /* line 24, sass/layouts/_grid.scss */
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  /* line 28, sass/layouts/_grid.scss */
+  .row .col-1-of-3 {
+    width: calc((100% - 2*6rem) / 3); }
+  /* line 32, sass/layouts/_grid.scss */
+  .row .col-2-of-3 {
+    width: calc((2*(100% - 2*6rem) / 3) + 6rem); }
+  /* line 36, sass/layouts/_grid.scss */
+  .row .col-1-of-4 {
+    width: calc((100% - 3*6rem) / 4); }
+  /* line 40, sass/layouts/_grid.scss */
+  .row .col-2-of-4 {
+    width: calc((2*(100% - 3*6rem) / 4) + ( 6rem)); }
+  /* line 44, sass/layouts/_grid.scss */
+  .row .col-3-of-4 {
+    width: calc((3*(100% - 3*6rem) / 4) + (2 * 6rem)); }
