--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,13 @@
+
+
+// color 
 $color-primary:#55c57a;
-$color-primary-light:#7ed56f;
-$color-primary-dark:#28b462;
+$color-primary-light:#4b6fd3;
+$color-primary-dark:#1437aa;
 $color-grey:#777;
 $color-white:#fff;
+
+//grid 
+$grid-width:114rem;
+$gutter-horizontal:6rem;
+$gutter-vertical:8rem;
