new section added in the website

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,10 +2,12 @@
 
 // color 
 $color-primary:#55c57a;
-$color-primary-light:#4b6fd3;
+$color-primary-light:#5b80e6;
 $color-primary-dark:#1437aa;
+$color-black:#000;
 $color-grey:#777;
 $color-white:#fff;
+$color-light-grey-1:#f7f7f7;
 
 //grid 
 $grid-width:114rem;
