--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,51 @@ body {
     animation-name: moveInRight;
     animation-duration: 1s; }
 
+/* line 33, sass/base/_typography.scss */
+.heading__secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #5b80e6, #1437aa);
+  -webkit-background-clip: text;
+  color: transparent;
+  display: inline-block;
+  transition: all .2s; }
+  /* line 43, sass/base/_typography.scss */
+  .heading__secondary:hover {
+    transform: skewX(15deg) skewY(2deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+/* line 49, sass/base/_typography.scss */
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: .1rem;
+  text-transform: uppercase; }
+
+/* line 55, sass/base/_typography.scss */
+.paragraph {
+  font-size: 1.5rem; }
+  /* line 58, sass/base/_typography.scss */
+  .paragraph:not(:last-child) {
+    margin-bottom: 2rem; }
+
+/* line 2, sass/base/_utilities.scss */
+.u-text-center {
+  text-align: center; }
+
+/* line 5, sass/base/_utilities.scss */
+.u-margin-bottom-small {
+  margin-bottom: 1rem; }
+
+/* line 8, sass/base/_utilities.scss */
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+/* line 11, sass/base/_utilities.scss */
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
 /* line 2, sass/components/_buttons.scss */
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -133,7 +178,7 @@ body {
 /* line 1, sass/layouts/_header.scss */
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(75, 111, 211, 0.801), rgba(20, 55, 170, 0.801)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(91, 128, 230, 0.801), rgba(20, 55, 170, 0.801)), url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -157,7 +202,6 @@ body {
 /* line 1, sass/layouts/_grid.scss */
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto; }
   /* line 7, sass/layouts/_grid.scss */
   .row:not(:last-child) {
@@ -169,29 +213,33 @@ body {
     clear: both; }
   /* line 12, sass/layouts/_grid.scss */
   .row [class^="col-"] {
-    background-color: #545fc2;
     float: left;
-    color: #fff;
     padding: 2rem;
     font-size: 2rem; }
-    /* line 19, sass/layouts/_grid.scss */
+    /* line 20, sass/layouts/_grid.scss */
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
-  /* line 24, sass/layouts/_grid.scss */
+  /* line 25, sass/layouts/_grid.scss */
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
-  /* line 28, sass/layouts/_grid.scss */
+  /* line 29, sass/layouts/_grid.scss */
   .row .col-1-of-3 {
     width: calc((100% - 2*6rem) / 3); }
-  /* line 32, sass/layouts/_grid.scss */
+  /* line 33, sass/layouts/_grid.scss */
   .row .col-2-of-3 {
     width: calc((2*(100% - 2*6rem) / 3) + 6rem); }
-  /* line 36, sass/layouts/_grid.scss */
+  /* line 37, sass/layouts/_grid.scss */
   .row .col-1-of-4 {
     width: calc((100% - 3*6rem) / 4); }
-  /* line 40, sass/layouts/_grid.scss */
+  /* line 41, sass/layouts/_grid.scss */
   .row .col-2-of-4 {
     width: calc((2*(100% - 3*6rem) / 4) + ( 6rem)); }
-  /* line 44, sass/layouts/_grid.scss */
+  /* line 45, sass/layouts/_grid.scss */
   .row .col-3-of-4 {
     width: calc((3*(100% - 3*6rem) / 4) + (2 * 6rem)); }
+
+/* line 3, sass/pages/_home.scss */
+.section__about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
