--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,3 +29,34 @@ body{
         animation-duration: 1s;
     }
 }
+//about section starts here
+.heading__secondary{
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    display: inline-block;
+    transition: all .2s;
+
+    &:hover{
+        transform: skewX(15deg) skewY(2deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black,0.2);
+    }
+}
+
+.heading-tertiary{
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+}
+.paragraph{
+    font-size: 1.5rem;
+
+    &:not(:last-child){
+        margin-bottom: 2rem;
+    }
+}
+//about section ends here
