--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,7 +8,7 @@
         border-radius: 10rem;
         transition: 200ms;
         position: relative;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
     }
     &:hover{
         transform: translateY(-3px);
@@ -62,3 +62,29 @@
         animation-fill-mode: backwards;
     }
 }
+
+//about section starts here
+.btn-text{
+    &:link,
+    &:visited{
+        font-size: $default-font-size;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        color: $color-primary;
+        padding: .4rem;
+        transition: all .2s;
+    }
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        transform: translateY(-2px);
+        box-shadow: 0 1rem 2rem rgba($color-black,.15);
+
+    }
+    &:active{
+        transform: translateY(0);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.15);
+    }
+}
+//about section ends here
