new feature added

--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -13,8 +13,8 @@
         
         float: left;
         // color: $color-white;
-        padding: 2rem;
-        font-size: 2rem;
+        // padding: 2.5rem;
+        // font-size: 2rem;
         
 
         &:not(:last-child){
