--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
 
 /* line 55, sass/base/_typography.scss */
 .paragraph {
-  font-size: 1.5rem; }
+  font-size: 1.6rem; }
   /* line 58, sass/base/_typography.scss */
   .paragraph:not(:last-child) {
     margin-bottom: 2rem; }
@@ -175,6 +175,160 @@ body {
   animation-delay: .75s;
   animation-fill-mode: backwards; }
 
+/* line 68, sass/components/_buttons.scss */
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #3370b6;
+  color: #3370b6;
+  padding: .4rem;
+  transition: all .2s; }
+
+/* line 78, sass/components/_buttons.scss */
+.btn-text:hover {
+  background-color: #3370b6;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15); }
+
+/* line 85, sass/components/_buttons.scss */
+.btn-text:active {
+  transform: translateY(0);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+
+/* line 1, sass/components/_composition.scss */
+.composition {
+  position: relative; }
+  /* line 4, sass/components/_composition.scss */
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    transition: all .2s;
+    z-index: 10;
+    outline-offset: 2rem; }
+    /* line 13, sass/components/_composition.scss */
+    .composition__photo--p1 {
+      top: -2rem;
+      left: 0; }
+    /* line 17, sass/components/_composition.scss */
+    .composition__photo--p2 {
+      top: 1rem;
+      left: 20rem; }
+    /* line 21, sass/components/_composition.scss */
+    .composition__photo--p3 {
+      top: 10rem;
+      left: 20%; }
+    /* line 25, sass/components/_composition.scss */
+    .composition__photo:hover {
+      outline: 1.5rem solid #3370b6;
+      box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
+      transform: scale(1.05) translateY(-1rem);
+      z-index: 20; }
+  /* line 33, sass/components/_composition.scss */
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+
+/* line 1, sass/components/_feature-box.scss */
+.features-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 3.5rem 2rem;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  text-align: center;
+  transition: all .3s; }
+  /* line 11, sass/components/_feature-box.scss */
+  .features-box__icon {
+    display: inline-block;
+    font-size: 6rem;
+    background-image: linear-gradient(to right, #5b80e6, #1437aa);
+    -webkit-background-clip: text;
+    color: transparent;
+    margin-bottom: .5rem; }
+  /* line 19, sass/components/_feature-box.scss */
+  .features-box:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.15); }
+
+/* line 1, sass/components/_card.scss */
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  /* line 7, sass/components/_card.scss */
+  .card__side {
+    height: 50rem;
+    transition: all .8s ease;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    border-radius: .3rem;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    /* line 19, sass/components/_card.scss */
+    .card__side--front {
+      background-color: #fff; }
+    /* line 22, sass/components/_card.scss */
+    .card__side--back {
+      transform: rotateY(180deg); }
+      /* line 25, sass/components/_card.scss */
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+  /* line 30, sass/components/_card.scss */
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  /* line 33, sass/components/_card.scss */
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  /* line 38, sass/components/_card.scss */
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: soft-light;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); }
+    /* line 45, sass/components/_card.scss */
+    .card__picture-1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../img/nat-5.jpg"); }
+  /* line 49, sass/components/_card.scss */
+  .card__heading {
+    color: #fff;
+    font-size: 2.8rem;
+    text-align: right;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    text-transform: uppercase;
+    width: 75%; }
+  /* line 59, sass/components/_card.scss */
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -moz-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    /* line 64, sass/components/_card.scss */
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.7), rgba(255, 119, 48, 0.7)); }
+  /* line 69, sass/components/_card.scss */
+  .card__details {
+    padding: 1rem; }
+    /* line 72, sass/components/_card.scss */
+    .card__details ul {
+      list-style: none;
+      margin: 0 auto;
+      font-size: 1.5rem;
+      width: 80%; }
+      /* line 78, sass/components/_card.scss */
+      .card__details ul li {
+        padding: 1rem;
+        text-align: center; }
+        /* line 82, sass/components/_card.scss */
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+
 /* line 1, sass/layouts/_header.scss */
 .header {
   height: 95vh;
@@ -213,9 +367,7 @@ body {
     clear: both; }
   /* line 12, sass/layouts/_grid.scss */
   .row [class^="col-"] {
-    float: left;
-    padding: 2rem;
-    font-size: 2rem; }
+    float: left; }
     /* line 20, sass/layouts/_grid.scss */
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
@@ -243,3 +395,20 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+/* line 11, sass/pages/_home.scss */
+.section-features {
+  padding: 19rem 0;
+  background-image: linear-gradient(to right bottom, rgba(91, 128, 230, 0.801), rgba(20, 55, 170, 0.801)), url("../img/nat-4.jpg");
+  background-size: cover;
+  margin-top: -8rem;
+  transform: skewY(-7deg); }
+  /* line 19, sass/pages/_home.scss */
+  .section-features > * {
+    transform: skewY(7deg); }
+
+/* line 26, sass/pages/_home.scss */
+.section-tour {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -10rem; }
