--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,15 +1,25 @@
 
 
 // color 
-$color-primary:#55c57a;
+$color-primary:#3370b6;
 $color-primary-light:#5b80e6;
 $color-primary-dark:#1437aa;
 $color-black:#000;
 $color-grey:#777;
 $color-white:#fff;
 $color-light-grey-1:#f7f7f7;
+$color-light-grey-2:#eee;
+
+$color-secondary-light:#ffb900;
+$color-secondary-dark:#ff7730;
+
+$color-tertiary-light:#0bdf40;
+$color-tertiary-dark:#39a310;
 
 //grid 
 $grid-width:114rem;
 $gutter-horizontal:6rem;
 $gutter-vertical:8rem;
+
+//Fonts
+$default-font-size : 1.6rem;
