--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,3 +6,26 @@
     margin-top: -20vh;
 }
 //about section ends here..
+
+//feature section starts here
+.section-features{
+    padding: 19rem 0;
+    background-image: linear-gradient(to right bottom,rgba($color-primary-light, 0.801),rgba($color-primary-dark, 0.801)), url('../img/nat-4.jpg');
+    background-size: cover;
+    margin-top: -8rem;
+
+    transform: skewY(-7deg);
+
+    & > * {
+        transform: skewY(7deg);
+    }
+}
+//feature section ends here
+
+//tour section starts here
+.section-tour{
+    background-color: $color-light-grey-1;
+    padding: 25rem 0;
+    margin-top: -10rem;
+}
+//tour section ends here
