--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,4 +11,10 @@
 .u-margin-bottom-big{
     margin-bottom: 8rem;
 }
+.u-margin-to-big{
+    margin-top: 8rem;
+}
+.u-margin-top-huge{
+    margin-top: 10rem;
+}
 //about section ends here
