--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -40,6 +40,19 @@
             }
         
     }
+    &--green{
+        background-color: $color-primary;
+        color: $color-white;
+
+        
+            &::after{
+                content: '';
+                background-color: $color-primary;
+            
+            
+            }
+        
+    }
 
     &::after{
         content: "";
