--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -25,6 +25,12 @@
             &-1{
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+            &-2{
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
+            &-3{
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
         }
     }
     &:hover &__side--front{
@@ -45,6 +51,12 @@
         &-1{
             background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url('../img/nat-5.jpg');
         }
+        &-2{
+            background-image:linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url('../img/nat-6.jpg');
+        }
+        &-3{
+            background-image:linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url('../img/nat-7.jpg');
+        }
     }
     &__heading{
         color: $color-white;
@@ -63,6 +75,12 @@
 
         &--1{
             background-image: linear-gradient(to right bottom,rgba($color-secondary-light,.70),rgba($color-secondary-dark,.70));
+        }
+        &--2{
+            background-image: linear-gradient(to right bottom,rgba($color-tertiary-light,.70),rgba($color-tertiary-dark,.70));
+        }
+        &--3{
+            background-image: linear-gradient(to right bottom,rgba($color-primary-light,.70),rgba($color-primary-dark,.70));
         }
     }
 
@@ -86,5 +104,28 @@
 
             }
         }
+    }
+
+    &__cta{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 90%;
+        text-align: center;
+    }
+    &__price--box{
+        color: $color-white;
+        margin-bottom: 8rem;
+        text-align: center;
+        
+    }
+    &__price--only{
+        font-size: 1.5rem;
+    }
+    &__price--value{
+        font-size: 6rem;
+        font-weight: 100;
+        
     }
 }
