--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,7 +25,7 @@
 //tour section starts here
 .section-tour{
     background-color: $color-light-grey-1;
-    padding: 25rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
 }
 //tour section ends here
