--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,3 +29,10 @@
     margin-top: -10rem;
 }
 //tour section ends here
+
+//story section starts here
+.section-stories{
+    padding: 15rem 0;
+    position: relative;
+}
+//story section ends here
