--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,7 +11,7 @@
 .u-margin-bottom-big{
     margin-bottom: 8rem;
 }
-.u-margin-to-big{
+.u-margin-top-big{
     margin-top: 8rem;
 }
 .u-margin-top-huge{
