--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -83,13 +83,13 @@
         font-size: $default-font-size;
         display: inline-block;
         text-decoration: none;
-        border-bottom: 1px solid $color-primary;
-        color: $color-primary;
+        border-bottom: 1px solid $color-primary-dark;
+        color: $color-primary-dark;
         padding: .4rem;
         transition: all .2s;
     }
     &:hover{
-        background-color: $color-primary;
+        background-color: $color-primary-dark;
         color: $color-white;
         transform: translateY(-2px);
         box-shadow: 0 1rem 2rem rgba($color-black,.15);
