--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $color-primary-light:#5b80e6;
 $color-primary-dark:#1437aa;
 $color-black:#000;
 $color-grey:#777;
+$color-grey-2:#999;
 $color-white:#fff;
 $color-light-grey-1:#f7f7f7;
 $color-light-grey-2:#eee;
@@ -15,6 +16,8 @@ $color-secondary-dark:#ff7730;
 
 $color-tertiary-light:#0bdf40;
 $color-tertiary-dark:#39a310;
+
+$color-red-1:#E91E63;
 
 //grid 
 $grid-width:114rem;
